--- a/src/main/resources/m/hossam/movielibraryviewer/card.fxml
+++ b/src/main/resources/m/hossam/movielibraryviewer/card.fxml
@@ -1,14 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="m.hossam.movielibraryviewer.Card"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: E1BEE7;" stylesheets="@../../../../java/m/hossam/movielibraryviewer/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="90.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" styleClass="rounded-image-view">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </HBox.margin>
+         <image>
+            <Image url="@../../../../../img/endgme.jpeg" />
+         </image>
+      </ImageView>
+      <VBox prefHeight="92.0" prefWidth="80.0">
+         <children>
+            <Label prefHeight="46.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Movie Name">
+               <font>
+                  <Font name="Segoe UI Bold" size="8.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </opaqueInsets>
+            </Label>
+            <Label prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Genre">
+               <font>
+                  <Font name="Segoe UI Bold" size="8.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </opaqueInsets>
+            </Label>
+            <Label prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="4">
+               <font>
+                  <Font name="Segoe UI Bold" size="8.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </opaqueInsets>
+            </Label>
+         </children>
+         <opaqueInsets>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </opaqueInsets>
+      </VBox>
+   </children>
+</HBox>
