--- a/src/main/resources/m/hossam/movielibraryviewer/card.fxml
+++ b/src/main/resources/m/hossam/movielibraryviewer/card.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: E1BEE7;" stylesheets="@../../../../java/m/hossam/movielibraryviewer/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:id="box" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: E1BEE7;" stylesheets="@../../../../java/m/hossam/movielibraryviewer/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="90.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" styleClass="rounded-image-view">
+      <ImageView fx:id="moviePoster" fitHeight="90.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" styleClass="rounded-image-view">
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </HBox.margin>
@@ -21,7 +20,7 @@
       </ImageView>
       <VBox prefHeight="92.0" prefWidth="80.0">
          <children>
-            <Label prefHeight="46.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Movie Name">
+            <Label fx:id="movieName" prefHeight="46.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Movie Name">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
@@ -29,7 +28,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </Label>
-            <Label prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Genre">
+            <Label fx:id="movieGenre" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Genre">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
