--- a/src/main/resources/m/hossam/movielibraryviewer/card.fxml
+++ b/src/main/resources/m/hossam/movielibraryviewer/card.fxml
@@ -36,7 +36,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </Label>
-            <Label prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="4">
+            <Label fx:id="movieRating" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="4">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
