--- a/src/main/resources/m/hossam/movielibraryviewer/card.fxml
+++ b/src/main/resources/m/hossam/movielibraryviewer/card.fxml
@@ -20,7 +20,7 @@
       </ImageView>
       <VBox prefHeight="92.0" prefWidth="80.0">
          <children>
-            <Label fx:id="movieName" prefHeight="46.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Movie Name">
+            <Label fx:id="movieName" prefHeight="46.0" prefWidth="78.0" style="-fx-text-fill: #ffffff;" text="Movie Name">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
@@ -28,7 +28,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </Label>
-            <Label fx:id="movieGenre" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="Genre">
+            <Label fx:id="movieGenre" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #ffffff;" text="Genre">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
@@ -36,7 +36,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </Label>
-            <Label fx:id="movieRating" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #8E24AA;" text="4">
+            <Label fx:id="movieRating" prefHeight="25.0" prefWidth="78.0" style="-fx-text-fill: #ffffff;" text="4">
                <font>
                   <Font name="Segoe UI Bold" size="8.0" />
                </font>
