--- a/src/main/resources/m/hossam/movielibraryviewer/hello-view.fxml
+++ b/src/main/resources/m/hossam/movielibraryviewer/hello-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,7 +19,10 @@
             </Label>
             <ScrollPane prefHeight="146.0" prefWidth="539.0">
                <content>
-                  <HBox fx:id="cardLayoutRecent" alignment="CENTER" prefHeight="124.0" prefWidth="541.0" spacing="10.0" style="-fx-background-color: #121212;" />
+                  <HBox fx:id="cardLayoutRecent" alignment="CENTER_LEFT" prefHeight="124.0" prefWidth="541.0" spacing="10.0" style="-fx-background-color: #121212;">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding></HBox>
                </content>
             </ScrollPane>
          </children>
